--- a/app/views/posts/partials/show/_notices.html.erb
+++ b/app/views/posts/partials/show/_notices.html.erb
@@ -45,3 +45,11 @@
     This post has <%= link_to "children", posts_path(:tags => "parent:#{post.id}") %> (<%= link_to "learn more", wiki_pages_path(:title => "help:post_relationships") %>)
   </div>
 <% end %>
+
+<% if post.is_mpo? %>
+  <div class="ui-corner-all ui-state-highlight notice">
+    This image is an MPO file which can be displayed on a Nintendo 3DS
+    <% if !post.has_large? || CurrentUser.default_image_size != "large" %>by tapping and holding the image in the 3DS Browser<% end %>
+    (<%= link_to "learn more", wiki_pages_path(:title => "help:mpo_files") %>)
+  </div>
+<% end %>
