--- a/app/views/static/terms_of_service.html.erb
+++ b/app/views/static/terms_of_service.html.erb
@@ -1,10 +1,10 @@
 <div id="terms-of-service">
-  <h1>Danbooru 2 Beta</h1>
+  <h1>Bronibooru 2 Beta</h1>
   
-  <p>Danbooru 2 is a rewrite of the original Danbooru source code. Most functionality remains the same. The goal is to create a cleaner architecture so that extending and expanding the site will be easier. The goal of the beta is to test the code and make sure all the pieces are working.</p>
-  <p>This test database is based on a copied snapshot of the Danbooru database. Unless you signed up recently, your account should exist on this test site.</p>
+  <p>Bronibooru 2 is based on the Danbooru 2 codebase, which is a rewrite of the original Danbooru source code. Most functionality remains the same. The goal is to create a cleaner architecture so that extending and expanding the site will be easier. The goal of the beta is to test the code and make sure all the pieces are working.</p>
+  <p>This test database is based on a copied snapshot of the Bronibooru database. Unless you signed up recently, your account should exist on this test site.</p>
   <p>You are encouraged to upload, comment, note, and do everything in your power to break the site. If you notice any bugs or any inconsistencies with the old site, there's an issue tracker on <a href="https://github.com/r888888888/danbooru/issues/new">Github</a> that you can use. If you would rather not create a new Github account, you can post comments on <a href="http://danbooru.donmai.us/forum/show/65870">the forum</a>.</p>
-  <p>Some of the major change from the original Danbooru are:</p>
+  <p>Some of the major change from the original Bronibooru are:</p>
   <ul>
     <li><strong>An upload queue.</strong> Uploads are now added to a queue and processed sequentially.</li>
     <li><strong>Small and large images.</strong> All images now get a small and large version.</li>
