Update terms of service

--- a/app/views/static/terms_of_service.html.erb
+++ b/app/views/static/terms_of_service.html.erb
@@ -5,10 +5,10 @@
 
     <ul>
       <li>The Site reserves the right to change these terms at any time.</li>
-      <li>If you are a minor, then you will not use the Site.</li>
+      <li>If you under the age of 13, then you will not register an account on the Site.</li>
       <li>The Site is presented to you AS IS, without any warranty, express or implied. You will not hold the Site or its staff members liable for damages caused by the use of the site.</li>
       <li>The Site reserves the right to delete or modify your account, or any content you have posted to the site.</li>
-      <li>You will make a best faith effort to upload only high quality anime-related images.</li>
+      <li>You will make a best faith effort to upload only high quality pony-related images.</li>
       <li>You have read the <%= link_to "tagging guidelines", wiki_pages_path(:title => "help:tags") %>.</li>
     </ul>
     
@@ -22,13 +22,12 @@
       <h6>Prohibited Content</h6>
       <p>In addition, you may not use the Site to upload any of the following:</p>
       <ul>
-        <li>Non-anime: Photographs of American porn actresses, for example, are prohibited. Photographs of cosplayers, figures, or prominent figures in the industry are acceptable.</li>
+        <li>Non-pony: Drawings of Strawberry Shortcake, for example, are prohibited. Photographs of cosplayers, figures, or prominent figures in the industry are acceptable.</li>
         <li>Furry: Any image or movie where a person's skin is made of fur or scales.</li>
-        <li>Watermarked: Any image where a person who is not the original copyright owner has placed a watermark on the image.</li>
         <li>Poorly compressed: Any image where compression artifacts are easily visible.</li>
-        <li>Grotesque: Any depiction of extreme mutilation, extreme bodily distension, feces, or bodies that are far outside the realm of normal human proportion (for example, breasts that are larger than three heads in size or penises that are larger than two heads in size).</li>
-        <li>Manga: Uploading entire manga or doujinshi chapters is discouraged. Individual pages can be uploaded if they meet the quality criterion.</li>
-        <li>Nude Filter: Images that have been edited by someone other than the original creator to remove clothing or censorship. These typically feature crude drawings of breasts or genitalia laid on top of the original image.</li>
+        <li>Shipping/Pornography: Any depiction of non-canon relationships or pornographic material.</li>
+        <li>Grotesque: Any depiction of extreme mutilation, extreme bodily distension, or feces.</li>
+        <li>Comics: Legally-published comics (i.e. those published by IDW) are not allowed. Individual covers can be uploaded if they have been posted by the artist on their own website.</li>
         <li>Fake translations: Images that have false translations are not allowed in any case.</li>
         <li>Hard translations: Images that have been edited to replace the original language are discouraged.</li>
       </ul>
