--- a/app/views/layouts/_main_links.html.erb
+++ b/app/views/layouts/_main_links.html.erb
@@ -8,6 +8,8 @@
   <%= nav_link_to("Comments", comments_path(:group_by => "post")) %>
   <%= nav_link_to("Notes", notes_path(:group_by => "post")) %>
   <%= nav_link_to("Wiki", wiki_pages_path(:title => "help:home")) %>
-  <%= nav_link_to("Forum", forum_topics_path, :class => (CurrentUser.user.has_forum_been_updated? ? "forum-updated" : nil)) %>
+  <%= nav_link_to("Tag Discussion", forum_topics_path, :class => (CurrentUser.user.has_forum_been_updated? ? "forum-updated" : nil)) %>
+  <%= nav_link_to("Forums", "http://www.roundstable.com/forums/") %>
+  <%= nav_link_to("TRS News", "http://www.roundstable.com/") %>
   <%= nav_link_to("More &raquo;".html_safe, site_map_path, :id => "site-map-link") %>
 </menu>
