Clarify ToS a little

--- a/app/views/static/terms_of_service.html.erb
+++ b/app/views/static/terms_of_service.html.erb
@@ -22,7 +22,7 @@
       <h6>Prohibited Content</h6>
       <p>In addition, you may not use the Site to upload any of the following:</p>
       <ul>
-        <li>Non-pony: Drawings of Strawberry Shortcake, for example, are prohibited. Photographs of cosplayers, figures, or prominent figures in the industry are acceptable.</li>
+        <li>Non-pony: Drawings of Strawberry Shortcake, for example, are prohibited. Photographs of cosplayers or figures are acceptable.</li>
         <li>Furry: Any image or movie where a person's skin is made of fur or scales.</li>
         <li>Poorly compressed: Any image where compression artifacts are easily visible.</li>
         <li>Shipping/Pornography: Any depiction of non-canon relationships or pornographic material.</li>
