--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,11 +1,14 @@
 <div id="c-users">
   <div id="a-search">
     <%= form_tag(users_path, :method => :get, :class => "simple_form") do %>
-      <%= search_field "name_matches", :label => "Name" %>
+      <div class="input">
+	<label for="search_name_matches">Name</label>
+	<%= search_field_tag("search[name_matches]") %>
+      </div>
       
       <div class="input">
-        <label for="search_level">Min Level</label>
-        <%= select("search", "min_level", User.level_hash.to_a) %>
+        <label for="search_min_level">Min Level</label>
+        <%= select_tag("search[min_level]", options_for_select(User.level_hash.to_a)) %>
       </div>
       
       <%= submit_tag "Search" %>
