--- a/app/views/comments/search.html.erb
+++ b/app/views/comments/search.html.erb
@@ -2,7 +2,7 @@
   <div id="a-search">
     <h1>Search Comments</h1>
     
-    <%= form_tag(comments_path, :method => :get) do |f| %>
+    <%= form_tag(comments_path, :method => :get, :class => "simple_form") do |f| %>
       <%= hidden_field_tag "group_by", "comment" %>
       
       <%= search_field :body_matches, :label => "Body" %>
