--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,10 +1,7 @@
 <div id="c-users">
   <div id="a-search">
     <%= form_tag(users_path, :method => :get, :class => "simple_form") do %>
-      <div class="input">
-	<label for="search_name_matches">Name</label>
-	<%= search_field_tag("search[name_matches]") %>
-      </div>
+      <%= search_field "name_matches", :label => "Name" %>
       
       <div class="input">
         <label for="search_min_level">Min Level</label>
