--- a/app/views/static/terms_of_service.html.erb
+++ b/app/views/static/terms_of_service.html.erb
@@ -5,7 +5,7 @@
     <p>Please read the following before using the site:</p>
     
     <ul>
-      <li>Danbooru reserves the right to delete or modify your account, or any content you have posted to the site.</li>
+      <li>Bronibooru reserves the right to delete or modify your account, or any content you have posted to the site.</li>
       <li>You will make a best faith effort to upload only high quality pony-related images.</li>
       <li>You have read the <%= link_to "tagging guidelines", wiki_pages_path(:title => "help:tags") %>.</li>
     </ul>
@@ -46,8 +46,8 @@
   <div class="section">
     <h4>Privacy Policy</h4>
 
-    <p>Danbooru will not disclose the IP address, email address, password, or DMails of any user except to the staff.</p>
-    <p>Danbooru is allowed to make public everything else, including but not limited to: uploaded posts, favorited posts, comments, forum posts, wiki edits, and note edits.</p>
+    <p>Bronibooru will not disclose the IP address, email address, password, or DMails of any user except to the staff.</p>
+    <p>Bronibooru is allowed to make public everything else, including but not limited to: uploaded posts, favorited posts, comments, forum posts, wiki edits, and note edits.</p>
   </div>
 </div>
 
