--- a/app/views/layouts/_main_links.html.erb
+++ b/app/views/layouts/_main_links.html.erb
@@ -15,7 +15,9 @@
   <% end %>
   <%= nav_link_to("Pools", pools_path) %>
   <%= nav_link_to("Wiki", wiki_pages_path(:title => "help:home")) %>
-  <%= nav_link_to("Forum", forum_topics_path, :class => (CurrentUser.user.has_forum_been_updated? ? "forum-updated" : nil)) %>
+  <%= nav_link_to("Image Discussion", forum_topics_path, :class => (CurrentUser.user.has_forum_been_updated? ? "forum-updated" : nil)) %>
+  <%= nav_link_to("Forums", "http://www.roundstable.com/forums/") %>
+  <%= nav_link_to("TRS News", "http://www.roundstable.com/") %>
   <% if CurrentUser.is_janitor? %>
     <%= nav_link_to("Dashboard", moderator_dashboard_path) %>
   <% end %>
