--- a/app/assets/stylesheets/common/advertisements.css.scss
+++ b/app/assets/stylesheets/common/advertisements.css.scss
@@ -22,7 +22,14 @@
   margin-right: auto;
   z-index: -5;
   font-size: 9pt;
-  margin-bottom: -60px;
-  height: 60px;
-  max-height: 60px;
+  height: 90px;
+  max-height: 90px;
+  margin-bottom: -90px;
+}
+
+.buy_some_apples {
+  color: red;
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 0;
 }
