--- a/app/views/uploads/new.html.erb
+++ b/app/views/uploads/new.html.erb
@@ -35,7 +35,7 @@
           <%= f.radio_button :rating, :q %>
           <%= f.label :rating_q, "Questionable", :title => "Nudity, anything erotic" %>
 
-          <%= f.radio_button :rating, :s %>
+          <%= f.radio_button :rating, :s, :checked => "checked" %>
           <%= f.label :rating_s, "Safe", :title => "Everything else" %>
         </fieldset>
       </div>
