--- a/app/views/post_sets/_blank.html.erb
+++ b/app/views/post_sets/_blank.html.erb
@@ -1,3 +1,3 @@
-<p>Nobody here but us chickens!</p>
+<p>Nobody here but Scootaloo!</p>
 
 <p class="paginator"><%= link_to "Go back", :back, :rel => "prev" %></p>
